--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
   </head>
   <body>
     <div class="container">
-      <p>Today's Article</p>
-      <h1>A Place in <span>Time</span> and <span>Space</span></h1>
+      <h1>Client Meeting <span class="heading">1:30 PM</span></h1>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua.
+      </p>
     </div>
   </body>
 </html>
