Added new layout design and style

--- a/index.html
+++ b/index.html
@@ -15,5 +15,12 @@
         tempor incididunt ut labore et dolore magna aliqua.
       </p>
     </div>
+    <div class="container content">
+      <p>Today's Article</p>
+      <h2 class="second">
+        A Place in <span class="new">Time</span> and
+        <span class="new">Space</span>
+      </h2>
+    </div>
   </body>
 </html>
